--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       Runke is, simply put, a project by and for people who love music.<br><br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
       The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
-      We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
+      We love music, and we hope you'll join our journey and enjoy some music with us :) <br>
     </p>
 
     <!-- Photo Gallery Section -->
@@ -334,17 +334,17 @@
       <div class="gallery-row">
         <div class="image-container">
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
-          <p class="caption">Dane - Guitar</p>
+          <p class="caption">Dane</p>
         </div>
         <div class="image-container">
           <img src="Nick.JPG" alt="Nick" class="gallery-img">
-          <p class="caption">Nick - Drums</p>
+          <p class="caption">Nick</p>
         </div>
       </div>
       <div class="gallery-row center">
         <div class="image-container">
           <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
-          <p class="caption">Lucas - Bass</p>
+          <p class="caption">Lucas</p>
         </div>
       </div>
     </div>
