--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
       margin: 0 0 20px;
     }
 
-    /* Gallery styles */
     .gallery {
       display: flex;
       flex-direction: column;
@@ -155,7 +154,7 @@
     }
 
     .gallery-img {
-      width: 144px; /* 120px + 20% */
+      width: 144px;
       height: 144px;
       object-fit: cover;
       border-radius: 10px;
@@ -322,32 +321,34 @@
   </div>
 
   <div class="black-box">
-    <p>
-      Runke is, simply put, a project by and for people who love music.<br><br>
-      We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
-      The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
-      We love music, and we hope you'll join our journey and enjoy some music with us :) <br>
-    </p>
 
     <!-- Photo Gallery Section -->
     <div class="gallery">
       <div class="gallery-row">
         <div class="image-container">
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
-          <p class="caption">Dane</p>
+          <p class="caption">Dane - Guitar</p>
         </div>
         <div class="image-container">
           <img src="Nick.JPG" alt="Nick" class="gallery-img">
-          <p class="caption">Nick</p>
+          <p class="caption">Nick - Drums</p>
         </div>
       </div>
       <div class="gallery-row center">
         <div class="image-container">
           <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
-          <p class="caption">Lucas</p>
+          <p class="caption">Lucas - Bass</p>
         </div>
       </div>
     </div>
+
+    <!-- Band Description -->
+    <p>
+      Runke is, simply put, a project by and for people who love music.<br><br>
+      We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
+      The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
+      We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
+    </p>
   </div>
 
   <div class="footer">
