--- a/index.html
+++ b/index.html
@@ -129,44 +129,41 @@
       margin: 0 0 20px;
     }
 
+    /* Gallery styles */
     .gallery {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 40px;
-      padding: 40px 0;
+      gap: 20px;
+      padding: 20px 0;
     }
-
     .gallery-row {
       display: flex;
       justify-content: center;
-      gap: 40px;
+      gap: 20px;
     }
-
     .gallery-row.center {
       justify-content: center;
     }
-
+    .gallery-img {
+      width: 140px;
+      height: 140px;
+      object-fit: cover;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    }
     .image-container {
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-
-    .gallery-img {
-      width: 144px;
-      height: 144px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
-    }
-
     .caption {
-      margin-top: 10px;
-      color: white;
+      color: #fff;
+      margin-top: 8px;
       font-size: 16px;
     }
 
+    /* Footer styles */
     .footer {
       position: fixed;
       bottom: 0;
@@ -191,47 +188,24 @@
       color: #ccc;
     }
 
-    .disclaimer-modal {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
-      color: white;
+    /* Mobile first: gallery above the text */
+    .mobile-only {
       display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
     }
 
-    .disclaimer-content {
-      background-color: rgba(0, 0, 0, 0.9);
-      padding: 30px;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    .disclaimer-content p {
-      font-size: 18px;
-    }
-
-    .disclaimer-content button {
-      background-color: #00f;
-      color: white;
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-
-    .disclaimer-content button:hover {
-      background-color: #ccc;
+    .desktop-only {
+      display: block;
     }
 
     @media (max-width: 480px) {
+      .mobile-only {
+        display: block;
+      }
+
+      .desktop-only {
+        display: none;
+      }
+
       .hero {
         height: auto;
         display: flex;
@@ -289,23 +263,11 @@
         font-size: 16.5px;
         line-height: 1.5;
       }
-
-      .disclaimer-modal {
-        display: flex;
-      }
     }
   </style>
 </head>
 
 <body>
-  <!-- Disclaimer Modal -->
-  <div class="disclaimer-modal" id="disclaimerModal">
-    <div class="disclaimer-content">
-      <p><strong>WARNING:</strong> This site is really only optimized on computer, so it won't be very pretty on the phone we can tell you are using.</p>
-      <button id="disclaimerButton">ok brah</button>
-    </div>
-  </div>
-
   <img src="backtruck.jpeg" alt="Hero" class="hero-image" id="heroImage" />
 
   <div class="hero-overlay">
@@ -322,8 +284,8 @@
 
   <div class="black-box">
 
-    <!-- Photo Gallery Section -->
-    <div class="gallery">
+    <!-- Gallery shown on phones (before paragraph) -->
+    <div class="gallery mobile-only">
       <div class="gallery-row">
         <div class="image-container">
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
@@ -349,6 +311,27 @@
       The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
       We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
     </p>
+
+    <!-- Gallery shown on desktop (after paragraph) -->
+    <div class="gallery desktop-only">
+      <div class="gallery-row">
+        <div class="image-container">
+          <img src="Dane.JPG" alt="Dane" class="gallery-img">
+          <p class="caption">Dane - Guitar</p>
+        </div>
+        <div class="image-container">
+          <img src="Nick.JPG" alt="Nick" class="gallery-img">
+          <p class="caption">Nick - Drums</p>
+        </div>
+      </div>
+      <div class="gallery-row center">
+        <div class="image-container">
+          <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
+          <p class="caption">Lucas - Bass</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <div class="footer">
@@ -358,8 +341,6 @@
   <script>
     const heroImage = document.getElementById('heroImage');
     const blanket = document.getElementById('blanket');
-    const disclaimerModal = document.getElementById('disclaimerModal');
-    const disclaimerButton = document.getElementById('disclaimerButton');
 
     function updateHeroImage() {
       if (window.innerWidth <= 480) {
@@ -385,10 +366,6 @@
       blanket.style.backdropFilter = `blur(${blurAmount}px)`;
       heroImage.style.filter = `blur(${1 + blurAmount}px)`;
       heroImage.style.transform = `scale(${scaleAmount})`;
-    });
-
-    disclaimerButton.addEventListener('click', () => {
-      disclaimerModal.style.display = 'none';
     });
   </script>
 </body>
