--- a/index.html
+++ b/index.html
@@ -284,50 +284,51 @@
 
   <div class="black-box">
 
-    <!-- Gallery shown on phones (before paragraph) -->
+
     <div class="gallery mobile-only">
       <div class="gallery-row">
         <div class="image-container">
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
-          <p class="caption">Dane - Guitar</p>
+          <p class="caption">Dane</p>
         </div>
         <div class="image-container">
           <img src="Nick.JPG" alt="Nick" class="gallery-img">
-          <p class="caption">Nick - Drums</p>
+          <p class="caption">Nick</p>
         </div>
       </div>
       <div class="gallery-row center">
         <div class="image-container">
           <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
-          <p class="caption">Lucas - Bass</p>
+          <p class="caption">Lucas</p>
         </div>
       </div>
     </div>
 
-    <!-- Band Description -->
+ 
     <p>
       Runke is, simply put, a project by and for people who love music.<br><br>
       We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
       The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
       We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
     </p>
-
+<br>
+    <br>
     <!-- Gallery shown on desktop (after paragraph) -->
     <div class="gallery desktop-only">
       <div class="gallery-row">
         <div class="image-container">
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
-          <p class="caption">Dane - Guitar</p>
+          <p class="caption">Dane</p>
         </div>
         <div class="image-container">
           <img src="Nick.JPG" alt="Nick" class="gallery-img">
-          <p class="caption">Nick - Drums</p>
+          <p class="caption">Nick</p>
         </div>
       </div>
       <div class="gallery-row center">
         <div class="image-container">
           <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
-          <p class="caption">Lucas - Bass</p>
+          <p class="caption">Lucas</p>
         </div>
       </div>
     </div>
