--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
     }
     .gallery-row {
       display: flex;
-      justify-content: space-evenly; /* Changed from center to space-evenly */
-      gap: 30px; /* Increased gap for more space between images */
-      width: 100%; /* Ensure the row takes full width */
+      justify-content: space-evenly;
+      gap: 20px;
+      width: 100%;
     }
     .gallery-row.center {
       justify-content: center;
     }
     .gallery-img {
-      width: 180px; /* Increased image size */
-      height: 180px; /* Increased image size */
+      width: 180px;
+      height: 180px;
       object-fit: cover;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
@@ -290,7 +290,7 @@
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
           <p class="caption">Dane</p>
         </div>
-        <div class="image-container">
+        <div class="image-container" style="margin-left: 20px;"> <!-- Adjusted margin to bring them closer -->
           <img src="Nick.JPG" alt="Nick" class="gallery-img">
           <p class="caption">Nick</p>
         </div>
@@ -318,10 +318,11 @@
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
           <p class="caption">Dane</p>
         </div>
-        <div class="image-container">
+        <div class="image-container" style="margin-left: 20px;"> <!-- Adjusted margin to bring them closer -->
           <img src="Nick.JPG" alt="Nick" class="gallery-img">
           <p class="caption">Nick</p>
         </div>
+        <br>
       </div>
       <div class="gallery-row center">
         <div class="image-container">
