--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
           <p class="caption">Dane</p>
         </div>
-        <div class="image-container" style="margin-left: 20px;"> <!-- Adjusted margin to bring them closer -->
+        <div class="image-container" style="margin-left: 10px;"> <!-- Reduced margin to bring them even closer -->
           <img src="Nick.JPG" alt="Nick" class="gallery-img">
           <p class="caption">Nick</p>
         </div>
@@ -318,7 +318,7 @@
           <img src="Dane.JPG" alt="Dane" class="gallery-img">
           <p class="caption">Dane</p>
         </div>
-        <div class="image-container" style="margin-left: 20px;"> <!-- Adjusted margin to bring them closer -->
+        <div class="image-container" style="margin-left: 10px;"> <!-- Reduced margin to bring them even closer -->
           <img src="Nick.JPG" alt="Nick" class="gallery-img">
           <p class="caption">Nick</p>
         </div>
