--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     @media (max-width: 480px) {
       .mobile-only {
         display: block;
+        margin-top: 0;  /* Ensure no space between intro and gallery */
       }
 
       .desktop-only {
@@ -240,6 +241,7 @@
         text-align: center;
         border-radius: 0;
         width: 100vw;
+        margin: 0; /* Removed margin to make gallery follow directly after */
       }
 
       .intro h1 {
