--- a/index.html
+++ b/index.html
@@ -139,32 +139,20 @@
     }
     .gallery-row {
       display: flex;
-      justify-content: space-evenly;
+      justify-content: center;
       gap: 20px;
-      width: 100%;
     }
     .gallery-row.center {
       justify-content: center;
     }
     .gallery-img {
-      width: 180px;
-      height: 180px;
+      width: 120px;
+      height: 120px;
       object-fit: cover;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
     }
-    .image-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .caption {
-      color: #fff;
-      margin-top: 8px;
-      font-size: 16px;
-    }
 
-    /* Footer styles */
     .footer {
       position: fixed;
       bottom: 0;
@@ -189,25 +177,48 @@
       color: #ccc;
     }
 
-    /* Mobile first: gallery above the text */
-    .mobile-only {
+    /* New modal style for the disclaimer */
+    .disclaimer-modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
       display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
     }
 
-    .desktop-only {
-      display: block;
+    .disclaimer-content {
+      background-color: rgba(0, 0, 0, 0.9);
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+    }
+
+    .disclaimer-content p {
+      font-size: 18px;
+    }
+
+    .disclaimer-content button {
+      background-color: #00f;
+      color: white;
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    .disclaimer-content button:hover {
+      background-color: #ccc;
     }
 
     @media (max-width: 480px) {
-      .mobile-only {
-        display: block;
-        margin-top: 0;  /* Ensure no space between intro and gallery */
-      }
-
-      .desktop-only {
-        display: none;
-      }
-
       .hero {
         height: auto;
         display: flex;
@@ -241,7 +252,6 @@
         text-align: center;
         border-radius: 0;
         width: 100vw;
-        margin: 0; /* Removed margin to make gallery follow directly after */
       }
 
       .intro h1 {
@@ -266,11 +276,23 @@
         font-size: 16.5px;
         line-height: 1.5;
       }
+
+      .disclaimer-modal {
+        display: flex;
+      }
     }
   </style>
 </head>
 
 <body>
+  <!-- Disclaimer Modal -->
+  <div class="disclaimer-modal" id="disclaimerModal">
+    <div class="disclaimer-content">
+      <p><strong>WARNING:</strong> This site is really only optimized on computer, so it won't be very pretty on the phone we can tell you are using.</p>
+      <button id="disclaimerButton">ok brah</button>
+    </div>
+  </div>
+
   <img src="backtruck.jpeg" alt="Hero" class="hero-image" id="heroImage" />
 
   <div class="hero-overlay">
@@ -286,53 +308,26 @@
   </div>
 
   <div class="black-box">
-    <div class="gallery mobile-only">
-      <div class="gallery-row">
-        <div class="image-container">
-          <img src="Dane.JPG" alt="Dane" class="gallery-img">
-          <p class="caption">Dane</p>
-        </div>
-        <div class="image-container" style="margin-left: 5px;"> <!-- Reduced margin further for much closer spacing -->
-          <img src="Nick.JPG" alt="Nick" class="gallery-img">
-          <p class="caption">Nick</p>
-        </div>
-      </div>
-      <div class="gallery-row center">
-        <div class="image-container">
-          <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
-          <p class="caption">Lucas</p>
-        </div>
-      </div>
-    </div>
-
     <p>
-      Runke is, simply put, a project by and for people who love music.<br><br>
-      We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br><br>
-      The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br><br>
+      Runke is, simply put, a project by and for people who love music.<br>
+      <br>
+      We in Runke all grew up loving genres like Punk Rock, 1st-2nd wave Emo, Indie, and Shoegaze.<br>
+      <br>
+      The group roles are as follows: Dane on guitar, Nick on drums, and Lucas on bass.<br>
+      <br>
       We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
     </p>
-    <br>
-    <br>
-    <!-- Gallery shown on desktop (after paragraph) -->
-    <div class="gallery desktop-only">
-      <div class="gallery-row">
-        <div class="image-container">
-          <img src="Dane.JPG" alt="Dane" class="gallery-img">
-          <p class="caption">Dane</p>
-        </div>
-        <div class="image-container" style="margin-left: 5px;"> <!-- Reduced margin further for much closer spacing -->
-          <img src="Nick.JPG" alt="Nick" class="gallery-img">
-          <p class="caption">Nick</p>
-        </div>
-      </div>
-      <div class="gallery-row center">
-        <div class="image-container">
-          <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
-          <p class="caption">Lucas</p>
-        </div>
-      </div>
-    </div>
+  </div>
 
+  <!-- Photo Gallery Section -->
+  <div class="gallery">
+    <div class="gallery-row">
+      <img src="portrait1.jpg" alt="Portrait 1" class="gallery-img">
+      <img src="portrait2.jpg" alt="Portrait 2" class="gallery-img">
+    </div>
+    <div class="gallery-row center">
+      <img src="portrait3.jpg" alt="Portrait 3" class="gallery-img">
+    </div>
   </div>
 
   <div class="footer">
@@ -342,6 +337,8 @@
   <script>
     const heroImage = document.getElementById('heroImage');
     const blanket = document.getElementById('blanket');
+    const disclaimerModal = document.getElementById('disclaimerModal');
+    const disclaimerButton = document.getElementById('disclaimerButton');
 
     function updateHeroImage() {
       if (window.innerWidth <= 480) {
@@ -367,6 +364,10 @@
       blanket.style.backdropFilter = `blur(${blurAmount}px)`;
       heroImage.style.filter = `blur(${1 + blurAmount}px)`;
       heroImage.style.transform = `scale(${scaleAmount})`;
+    });
+
+    disclaimerButton.addEventListener('click', () => {
+      disclaimerModal.style.display = 'none';
     });
   </script>
 </body>
