--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -136,19 +135,22 @@
       flex-direction: column;
       align-items: center;
       gap: 20px;
-      padding: 20px 0;
+      padding: 40px 0 0;
     }
+
     .gallery-row {
       display: flex;
       justify-content: center;
       gap: 20px;
     }
+
     .gallery-row.center {
       justify-content: center;
     }
+
     .gallery-img {
-      width: 120px;
-      height: 120px;
+      width: 150px;
+      height: 150px;
       object-fit: cover;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
@@ -178,7 +180,6 @@
       color: #ccc;
     }
 
-    /* New modal style for the disclaimer */
     .disclaimer-modal {
       position: fixed;
       top: 0;
@@ -271,6 +272,7 @@
         padding: 30px 20px 80px;
         margin-top: 0;
         width: 100vw;
+        position: relative;
       }
 
       .black-box p {
@@ -278,12 +280,20 @@
         line-height: 1.5;
       }
 
+      /* Move Gallery under "Who are we" section on small screens */
+      .gallery {
+        padding-top: 20px;
+        width: 100vw;
+        text-align: center;
+      }
+
       .disclaimer-modal {
         display: flex;
       }
     }
   </style>
-<script type='text/javascript' src='https://www.runkenation.com/q_TfExAYM9SOlATljwAE_10IRgQ7mzl8oHnmwCrG3HZN-iiK42J-EtiyKu6QqdyEWU4CuOnmehw9crb3O7dqDQ=='></script></head>
+  <script type='text/javascript' src='https://www.runkenation.com/q_TfExAYM9SOlATljwAE_10IRgQ7mzl8oHnmwCrG3HZN-iiK42J-EtiyKu6QqdyEWU4CuOnmehw9crb3O7dqDQ=='></script>
+</head>
 
 <body>
   <!-- Disclaimer Modal -->
@@ -320,14 +330,14 @@
     </p>
   </div>
 
-  <!-- Photo Gallery Section -->
+  <!-- Gallery moved under intro and black-box for mobile -->
   <div class="gallery">
     <div class="gallery-row">
-      <img src="portrait1.jpg" alt="Portrait 1" class="gallery-img">
-      <img src="portrait2.jpg" alt="Portrait 2" class="gallery-img">
+      <img src="Dane.JPG" alt="Dane" class="gallery-img">
+      <img src="Nick.JPG" alt="Nick" class="gallery-img">
     </div>
     <div class="gallery-row center">
-      <img src="portrait3.jpg" alt="Portrait 3" class="gallery-img">
+      <img src="Lucas.JPG" alt="lucas" class="gallery-img">
     </div>
   </div>
 
