--- a/index.html
+++ b/index.html
@@ -328,16 +328,16 @@
       <br>
       We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
     </p>
-  </div>
 
-  <!-- Gallery moved under intro and black-box for mobile -->
-  <div class="gallery">
-    <div class="gallery-row">
-      <img src="Dane.JPG" alt="Dane" class="gallery-img">
-      <img src="Nick.JPG" alt="Nick" class="gallery-img">
-    </div>
-    <div class="gallery-row center">
-      <img src="Lucas.JPG" alt="lucas" class="gallery-img">
+    <!-- Gallery placed inside the black box -->
+    <div class="gallery">
+      <div class="gallery-row">
+        <img src="Dane.JPG" alt="Dane" class="gallery-img">
+        <img src="Nick.JPG" alt="Nick" class="gallery-img">
+      </div>
+      <div class="gallery-row center">
+        <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
+      </div>
     </div>
   </div>
 
