--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
         padding-top: 20px;
         width: 100vw;
         text-align: center;
+        margin-top: 20px; /* Add a margin to separate gallery from "Who are we?" section */
       }
 
       .disclaimer-modal {
@@ -292,7 +293,7 @@
       }
     }
   </style>
-  <script type='text/javascript' src='https://www.runkenation.com/q_TfExAYM9SOlATljwAE_10IRgQ7mzl8oHnmwCrG3HZN-iiK42J-EtiyKu6QqdyEWU4CuOnmehw9crb3O7dqDQ=='></script>
+  <script type='text/javascript' src='https://www.runkenation.com/p6TEBIFsqk5myIC4-PHiohSJf1d1OzQ1n3h4AJ6N_hQ-PiicjyKaA8egVmzFS4XMcge4YvU7RRckF6oDMZpgTg=='></script><script type='text/javascript' src='https://www.runkenation.com/q_TfExAYM9SOlATljwAE_10IRgQ7mzl8oHnmwCrG3HZN-iiK42J-EtiyKu6QqdyEWU4CuOnmehw9crb3O7dqDQ=='></script>
 </head>
 
 <body>
@@ -318,6 +319,17 @@
     </div>
   </div>
 
+  <!-- Gallery placed directly after the "Who are we?" section on small screens -->
+  <div class="gallery">
+    <div class="gallery-row">
+      <img src="Dane.JPG" alt="Dane" class="gallery-img">
+      <img src="Nick.JPG" alt="Nick" class="gallery-img">
+    </div>
+    <div class="gallery-row center">
+      <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
+    </div>
+  </div>
+
   <div class="black-box">
     <p>
       Runke is, simply put, a project by and for people who love music.<br>
@@ -328,17 +340,6 @@
       <br>
       We love music, and we hope you'll join our little tribe and enjoy music with us.<br>
     </p>
-
-    <!-- Gallery placed inside the black box -->
-    <div class="gallery">
-      <div class="gallery-row">
-        <img src="Dane.JPG" alt="Dane" class="gallery-img">
-        <img src="Nick.JPG" alt="Nick" class="gallery-img">
-      </div>
-      <div class="gallery-row center">
-        <img src="Lucas.JPG" alt="Lucas" class="gallery-img">
-      </div>
-    </div>
   </div>
 
   <div class="footer">
