--- a/index.html
+++ b/index.html
@@ -287,6 +287,13 @@
         display: flex;
       }
     }
+
+    /* Hide disclaimer on desktop */
+    @media (min-width: 481px) {
+      .disclaimer-modal {
+        display: none;
+      }
+    }
   </style>
   <script type='text/javascript' src='https://www.runkenation.com/p6TEBIFsqk5myIC4-PHiohSJf1d1OzQ1n3h4AJ6N_hQ-PiicjyKaA8egVmzFS4XMcge4YvU7RRckF6oDMZpgTg=='></script><script type='text/javascript' src='https://www.runkenation.com/q_TfExAYM9SOlATljwAE_10IRgQ7mzl8oHnmwCrG3HZN-iiK42J-EtiyKu6QqdyEWU4CuOnmehw9crb3O7dqDQ=='></script>
 </head>
