--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     .mobile-gallery-row {
       display: flex;
       justify-content: center;
-      gap: 20px;
+      gap: 25px; /* Increased gap to spread images out */
     }
 
     .mobile-gallery-row.center {
@@ -174,8 +174,8 @@
     }
 
     .mobile-gallery-img {
-      width: 150px;
-      height: 150px;
+      width: 160px; /* Slightly larger size for mobile */
+      height: 160px;
       object-fit: cover;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
