--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     /* Desktop Gallery */
     .desktop-gallery {
-      display: flex;
+      display: none;
       flex-direction: column;
       align-items: center;
       gap: 20px;
@@ -325,6 +325,10 @@
     @media (min-width: 481px) {
       .disclaimer-modal {
         display: none;
+      }
+
+      .desktop-gallery {
+        display: block;
       }
     }
   </style>
